--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.3",
     "google-auth-library": "^8.7.0",
     "mkdirp": "^2.1.3",
+    "moment": "^2.29.4",
     "open": "^8.4.0"
   },
   "devDependencies": {
