--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "google-auth-library": "^8.7.0",
     "mkdirp": "^2.1.3",
     "moment": "^2.29.4",
+    "fluent-ffmpeg": "latest",
+    "ffmpeg-static": "latest",
+    "ffprobe-static": "latest",
     "open": "^8.4.0"
   },
   "devDependencies": {
